--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -516,8 +516,9 @@ EphyToolbar.toolbar .button {
 
 /* Border on the right in the left menu toolbar */
 .contacts-left-toolbar.toolbar.menubar {
- border-image: linear-gradient(to bottom, @bg_color, shade(@borders,1.2));
+ border-image: linear-gradient(to bottom, @bg_color, shade(@borders, 1.2));
  border-image-width: 0 1px 0 0;
+ border-image-slice: 1;
 }
 
 /* Sidebar with line at top and the left */
