highcontrast: update trough bg color

--- a/themes/a11y-base.css
+++ b/themes/a11y-base.css
@@ -79,7 +79,7 @@ GtkComboBox .separator {
 }
 
 .trough {
-    background-color: @theme_active_color;
+    background-color: @theme_scrollbar_trough;
     color: @theme_fg_color;
 }
 
