highcontrast: tweak switch border
Make it look like an actual button

--- a/themes/a11y-base.css
+++ b/themes/a11y-base.css
@@ -351,7 +351,7 @@ GtkSwitch.slider:insensitive {
 }
 
 GtkSwitch.trough {
-    border-color: @theme_internal_border;
+    border-color: @theme_fg_color;
     background-color: @theme_button_bg;
 }
 
