--- a/themes/HighContrast/gtk-3.0/gtk.css
+++ b/themes/HighContrast/gtk-3.0/gtk.css
@@ -29,7 +29,7 @@
     -GtkHTML-vlink-color: #600000;
     -GtkHTML-cite-color: #003000;
 
-    -GtkWidget-link-color: #80ccff;
+    -GtkWidget-link-color: @theme_highlight_color;
     -GtkWidget-visited-link-color: #ff80ff;
 }
 
