--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1106,6 +1106,7 @@ GtkLinkButton.button *:active {
     border-style: solid;
     border-width: 1px;
 
+    background-clip: border-box;
     background-color: @theme_base_color;
 
     -GtkNotebook-tab-overlap: 8;
@@ -1198,16 +1199,18 @@ GtkLinkButton.button *:active {
     padding: 3px;
 }
 
+.notebook tab.left {
+    border-width: 1px 0 1px 1px;
+}
+
+.notebook tab.right {
+    border-width: 1px 1px 1px 0;
+}
+
 .notebook tab.left:active,
 .notebook tab.right:active {
     background-image: none;
     background-color: @theme_base_color;
-    -adwaita-selected-tab-color: alpha(@theme_base_color, 0.0);
-}
-
-.notebook tab.left,
-.notebook tab.right {
-    border-width: 1px;
 }
 
 .notebook tab.left:active {
