--- a/themes/a11y-base.css
+++ b/themes/a11y-base.css
@@ -5,7 +5,7 @@
 
     -GtkTreeView-expander-size: 16;
 
-    -GtkWidget-cursor-color: @theme_highlight_color;
+    -GtkWidget-cursor-color: @theme_cursor_color;
     -GtkWidget-cursor-aspect-ratio: 0.10;
 
     -GtkWidget-focus-padding: 1;
@@ -184,6 +184,10 @@ GtkComboBox .button {
     border-width: 0px;
 }
 
+.menuitem {
+    color: @theme_fg_color;
+}
+
 .menubar .menuitem {
     padding: 3px 5px;
 }
@@ -205,7 +209,9 @@ GtkComboBox .button {
 .menu {
     border-style: solid;
     border-color: @theme_fg_color;
-    border-width: 2px;
+    border-width: 1px;
+
+    color: @theme_fg_color;
 }
 
 .menuitem.separator {
@@ -342,7 +348,7 @@ GtkScale.slider {
     background-color: @theme_slider_bg;
     color: transparent;
 
-    border-radius: 20px;
+    border-radius: 10px;
     border-color: @theme_slider_border;
     border-style: solid;
     border-width: 1px;
@@ -397,7 +403,7 @@ GtkSwitch.trough:active {
 }
 
 .notebook tab {
-    background-color: @theme_internal_bg;
+    background-color: @theme_notebook_bg;
     padding: 3px;
 
     border-color: @theme_fg_color;
