--- a/themes/a11y-base.css
+++ b/themes/a11y-base.css
@@ -67,10 +67,13 @@ GtkImage:insensitive {
     border-width: 1px;
     border-style: solid;
     border-color: @theme_fg_color;
+
+    border-radius: 3px;
 }
 
 .button {
     background-color: @theme_button_bg;
+    padding: 1px 4px;
 }
 
 .button:insensitive {
@@ -127,6 +130,7 @@ GtkComboBox .separator {
 
 .entry {
     background-color: @theme_base_color;
+    padding: 4px;
 }
 
 .entry:selected {
@@ -144,30 +148,34 @@ GtkComboBox .separator {
     border-style: none;
 }
 
-.entry {
-    padding: 4px;
-}
-
-.button {
-    padding: 1px 4px;
-}
-
 GtkComboBox .button {
     padding: 0 4px;
 }
 
 .combobox-entry .entry:first-child {
     border-right-width: 0px;
+    border-radius: 2px 0 0 2px;
 }
 
 .combobox-entry .entry:last-child {
     border-left-width: 0px;
+    border-radius: 0 2px 2px 0;
+}
+
+.combobox-entry .button:first-child {
+    border-radius: 2px 0 0 2px;
+}
+
+.combobox-entry .button:last-child {
+    border-radius: 0 2px 2px 0;
 }
 
 .spinbutton .button {
     padding: 2px 6px;
-    border-width: 0px 1px;
     color: @theme_fg_color;
+
+    border-width: 0px 1px;
+    border-radius: 0;
 }
 
 .spinbutton .button:hover {
@@ -182,6 +190,14 @@ GtkComboBox .button {
 .spinbutton .button:first-child,
 .spinbutton .button:last-child {
     border-width: 0px;
+}
+
+.spinbutton .button:first-child {
+    border-radius: 2px 0 0 2px;
+}
+
+.spinbutton .button:last-child {
+    border-radius: 0 2px 2px 0;
 }
 
 .menuitem {
@@ -294,6 +310,7 @@ GtkComboBox .button {
 .linked .button,
 .inline-toolbar .button {
     border-right-width: 0;
+    border-radius: 0;
 }
 
 .linked .button:hover,
@@ -309,6 +326,7 @@ GtkComboBox .button {
 
 .linked .button:first-child,
 .inline-toolbar GtkToolButton:first-child .button {
+    border-radius: 3px 0 0 3px;
     border-left-color: @theme_fg_color;
 }
 
@@ -316,6 +334,7 @@ GtkComboBox .button {
 .inline-toolbar GtkToolButton:last-child .button {
     border-width: 1px;
     border-right-color: @theme_fg_color;
+    border-radius: 0 3px 3px 0;
 }
 
 .inline-toolbar .button *:insensitive,
@@ -392,8 +411,10 @@ GtkSwitch.slider:insensitive {
 }
 
 GtkSwitch.trough {
-    border-color: @theme_fg_color;
     background-color: @theme_button_bg;
+
+    border-color: @theme_fg_color;
+    border-radius: 3px;
 }
 
 GtkSwitch.trough:active {
@@ -461,6 +482,7 @@ column-header .button {
 
     border-top-width: 0;
     border-right-width: 0;
+    border-radius: 0;
 }
 
 column-header .button:hover {
