nautilus: fix background color for inactive pane
We need to use a different background color for the inactive pane, or it
will be confusing to understand which pane actions apply to.

https://bugzilla.gnome.org/show_bug.cgi?id=674793

--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -40,9 +40,20 @@ TerminalWindow GtkNotebook.notebook {
     border-radius: 5px;
 }
 
+.nautilus-inactive-pane .view {
+    background-color: @theme_unfocused_base_color;
+}
+
+.nautilus-inactive-pane .view:selected,
 .nautilus-inactive-pane .nautilus-canvas-item:selected {
     background-color: @theme_unfocused_selected_bg_color;
     color: @theme_unfocused_selected_fg_color;
+}
+
+.nautilus-inactive-pane .expander.view:selected {
+    background-color: @theme_unfocused_selected_bg_color;
+    color: @internal_element_color;
+    border-color: @internal_element_color;
 }
 
 .nautilus-desktop.nautilus-canvas-item {
